# lab04

./: CMakeLists.txt  README.md
.github/workflows/: configuration.yml
examples/: example2.cpp
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
